<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/navigation_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_addContent"
        android:icon="@drawable/navigation_add"
        android:title="@string/title_addContent" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/navigation_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/navigation_settings"
        android:title="@string/title_settings" />

</menu>