<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            app:cardCornerRadius="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/login_bkg"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop">
            </ImageView>
            <TextView
                android:id="@+id/title_textView"
                android:layout_below="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="40dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="50dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp"
            android:layout_below="@id/header"
            android:elevation="12dp"
            android:layout_marginTop="-16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="480dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_title"
                    android:textAllCaps="true"
                    android:id="@+id/login_title"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:textColor="@color/login_primary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_title"
                    android:text="@string/signin_email"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    android:id="@+id/email_title"
                    android:textColor="@color/login_medium"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_title"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/hint_email"
                    android:id="@+id/username"
                    android:backgroundTint="@color/login_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username"
                    android:text="@string/signin_password"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="32dp"
                    android:textSize="14sp"
                    android:id="@+id/password_title"
                    android:textColor="@color/login_medium"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_title"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/password"
                    android:layout_marginRight="16dp"
                    android:hint="@string/hint_password"
                    android:backgroundTint="@color/login_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:text="@string/signin_lostPassword"
                    android:textColor="@color/login_medium"
                    android:layout_marginRight="16dp"
                    android:id="@+id/password_lost"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentRight="true"/>

                <custom_font.MyTextView
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/round_gradient"
                    android:text="@string/signin_button"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:layout_below="@id/password_lost"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginBtn"
                    android:text="@string/signin_createAccount"
                    android:textColor="@color/login_medium"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>