<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wfr_1_blur">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/transparent"
        android:scaleType="fitXY"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logo_128"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:gravity="center"

        />
    <custom_font.MyTextView
        android:layout_above="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundwhite">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/email"
                android:layout_gravity="center"
                android:paddingLeft="10dp"/>
            <custom_font.MyEditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:letterSpacing="0.1"
                android:hint="@string/hint_email"
                android:textColor="@color/white"
                android:id="@+id/email"
                android:textColorHint="@color/white"
                android:drawablePadding="10dp"
                android:textSize="13dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundwhite"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_gravity="center"
                android:paddingLeft="10dp"/>
            <custom_font.MyEditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:textColor="@color/white"
                android:letterSpacing="0.1"
                android:textColorHint="@color/white"
                android:drawablePadding="10dp"
                android:textSize="13dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/roundwhite"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                />


            <custom_font.MyEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:hint="@string/hint_confirmPassword"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:id="@+id/password_confirmation"
                android:textSize="13dp"
                android:letterSpacing="0.1"
                android:layout_weight="1"
                />
        </LinearLayout>
        <custom_font.MyTextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round"
            android:text="@string/signup_button"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_above="@+id/bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <custom_font.MyTextView
                android:id="@+id/signin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_login"
                android:textColor="@color/white"/>
            <custom_font.MyTextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/help"
                android:text="@string/signup_help"
                android:textColor="@color/white"
                android:gravity="end"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>